--- a/Machine Failure Prediction.ipynb
+++ b/Machine Failure Prediction.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "f8550188",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "# # Display first 5 rows\n",
+    "# Display first 5 rows\n",
     "df.head()"
    ]
   },
